CCD-5867 code review changes